k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pulsecheck
spec:
  type: ClusterIP
  selector:
    app: pulsecheck-backend
  ports:
    - port: 3001
      targetPort: 3001
