k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsecheck-frontend-svc
  namespace: pulsecheck
spec:
  type: ClusterIP
  selector:
    app: pulsecheck-frontend
  ports:
    - port: 80
      targetPort: 80
